--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,6 +1,76 @@
-@import "bootstrap"
+@import "bootstrap";
 
 .navbar {
-  font-family: "Helvetica Neue", Helvetica;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
+  box-shadow: 0px 1px 3px #2a2a2a;
+  background: image_url('stardust.png')
+}
+
+.navbar-inverse a.navbar-brand {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 100;
+  color: white;
+}
+
+.hero{
+  background: image_url('hero.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 370px;
+  box-shadow: 0px 3px 8px #2a2a2a;
+}
+
+h1, h2, h3, h4, h5, h6, .navbar {
+ 
+}
+
+.frosty {
+  background: rgba(0,0,100,0.2);
+  color: white;
+}
+
+.frosty h1 {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 100;
+  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+}
+
+.frosty h2 {
+  font-family: 'Source Sans Pro', sans-serif;
   font-weight: 200;
+  text-shadow: rgba(0,0,0,0.95) 1px 1px;
+}
+
+.btn {
+  border-radius: 0;
+}
+
+.feature {
+  width: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
+
+}
+
+body {
+  background: image_url('bg.png');
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.booyah-box {
+  -mox-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 10px;
+  }
+
+  .booyah-box h2, .booyah-box h1 {
+    margin: 10px;
+  }
 }
