--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Learn Magic from the Pros</h1>
-<h2>I'm an illusionist, Linh.</h2>
+<div class="hero">
+  <br />
+  <div class="frosty col-10 offset-1 text-center">
+    <br />
+  <h1>Learn Magic from the Pros</h1>
+    <br />
+  <h2>I'm an illusionist, Linh.</h2>
+    <br />
+  <%= link_to 'Learn More', '#', class: 'btn btn-success' %>
+    <br /><br />
+  </div>
+</div>
+<br />
+
+<div class="row feature text-center">
+  <div class="col-12 col-sm">
+    <h3>Movies</h3>
+    <br />
+    <p>We have hundreds of movies to select from</p>
+  </div>
+
+<div class="row text-center">
+  <div class="col-12 col-sm">
+    <h3>TV Shows</h3>
+     <br />
+    <p>A wide variety of television shows from past to present</p>
+  </div>
+
+<div class="row text-center">
+  <div class="col-12 col-sm">
+    <h3>Originals</h3>
+    <p>Video content created directly from Flixter</p>
+  </div>
+  </div>
+</div>
