--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -4,7 +4,7 @@
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
   box-shadow: 0px 1px 3px #2a2a2a;
-  background: image_url('stardust.png')
+  background: image_url('stardust.png');
 }
 
 .navbar-inverse a.navbar-brand {
@@ -73,4 +73,3 @@ body {
   .booyah-box h2, .booyah-box h1 {
     margin: 10px;
   }
-}
