--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -24,7 +24,7 @@
 }
 
 h1, h2, h3, h4, h5, h6, .navbar {
- 
+
 }
 
 .frosty {
@@ -72,4 +72,16 @@ body {
 
   .booyah-box h2, .booyah-box h1 {
     margin: 10px;
+  }
+
+  .help-block {
+    color: #ff3333;
+    background-color: #FFEEEE;
+    border-radius: 3px;
+    padding: 2px 8px 2px 8px;
+    margin: 10px;
+  }
+
+  .clr {
+    clear: both;
   }
