--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,7 +4,7 @@
   <h1 class="text-center">Learn something today</h1>
   <hr />
 
-  <% @courses.each do |course| %>
+  <% @course.each do |course| %>
     <h2 class="text-center"><%= course.title %></h2>
     <br />
     <div class="row">
