--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,6 +5,7 @@
   <hr />
 
   <% @courses.each do |course| %>
+      <%= image_tag @course.image, class: 'img-fluid' %>
     <h2 class="text-center"><%= course.title %></h2>
     <br />
     <div class="row">
