--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,7 +6,8 @@
     <br />
   <h2>Comedy, Drama, Thriller, Adventure</h2>
     <br />
-  <%= link_to 'Learn More', 'courses_path', class: 'btn btn-success' %>
+  <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
+
     <br /><br />
   </div>
 </div>
