--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -33,14 +33,14 @@
   <h1 class="text-center"><%= current_course.title %></h1>
 
   <br />
-  <%= link_to 'Preview As Student...', course_path(current_course), class: 'btn btn-warning float-right' %>
+  <%= link_to 'Preview As Student...', course_path(current_course), class: 'btn btn-outline-danger btn-lg waves-effect float-right' %>
   <br class="clr" />
 
 
   <!-- Button trigger modal -->
   <div class="text-center">
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newSectionModal">
+    <button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#newSectionModal">
       Add a new section...
     </button>
   </div>
