--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,13 +1,11 @@
+
 <div class="hero">
   <br />
   <div class="frosty col-10 offset-1 text-center">
     <br />
-  <h1>Watch movie magic from any device</h1>
+  <h1>Photography & Video Classes </h1>
     <br />
-  <h2>Comedy, Drama, Thriller, Adventure</h2>
-    <br />
-  <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
-
+  <%= link_to 'Learn More', courses_path, class: 'btn btn-outline-secondary btn-lg waves-effect' %>
     <br /><br />
   </div>
 </div>
@@ -15,22 +13,27 @@
 
 <div class="row feature text-center">
   <div class="col-12 col-sm">
-    <h3>Movies</h3>
+    <div style="font-size:3em; color:Tomato">
+      <i class="fa fa-balance-scale"></i>
+    </div>
+    <h4>Photo & Video Topics</h4>
     <br />
-    <p>We have hundreds of movies to select from</p>
+    <p>What interests you? Browse photography and video classes by topic.</p>
   </div>
-
-<div class="row text-center">
-  <div class="col-12 col-sm">
-    <h3>TV Shows</h3>
+    <div class="col-12 col-sm">
+      <div style="font-size:3em; color:Tomato">
+        <i class="fa fa-camera-retro"></i>
+      </div>
+    <h4>Learning Paths for Photographers</h4>
      <br />
-    <p>A wide variety of television shows from past to present</p>
+    <p>A new, faster way to crush your goals.</p>
   </div>
-
-<div class="row text-center">
-  <div class="col-12 col-sm">
-    <h3>Originals</h3>
-    <p>Video content created directly from Flixter</p>
+    <div class="col-12 col-sm">
+        <div style="font-size:3em; color:Tomato">
+          <i class="fa fa-group"></i>
+        </div>
+    <h4>Free Upcoming Classes</h4>
+     <br />
+    <p>Start learning for free with on air classes.</p>
+    </div>
   </div>
-  </div>
-</div>
