--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 
 .navbar {
   font-family: 'Source Sans Pro', sans-serif;
@@ -19,13 +20,21 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 370px;
+  height: 400px;
   box-shadow: 0px 3px 8px #2a2a2a;
 }
 
 h1, h2, h3, h4, h5, h6, .navbar {
 
 }
+
+.course-title {;
+  background: image_url('peace.jpg') no-repeat center center fixed;
+  background-size: cover;
+  height: 400px;
+  box-shadow: 0px 3px 8px #2a2a2a;
+  }
+
 
 .frosty {
   background: rgba(0,0,100,0.2);
@@ -65,9 +74,16 @@ body {
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
   box-shadow: 1px 1px 2px 0 #d0d0d0;
   background: #fff;
-  border: 1px solid #ccc;
+  border: 1px round #ccc;
+  border-radius: 40px;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
-  padding: 10px;
+  padding: 20px;
+  margin-top: 1em;
+  margin-bottom: 1.5em;
+  }
+
+  .section{
+    margin: 5px;
   }
 
   .booyah-box h2, .booyah-box h1 {
