--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,7 +1,8 @@
 <br />
 
 <div class="booyah-box col-10 offset-1">
-  <h1>What I'm Learning</h1>
+  <h1>Photography and Video Topics</h1>
+  <p>
   <% current_user.enrolled_courses.each do |course| %>
     <h3 class="text-center">
       <%= link_to course.title, course_path(course) %>
@@ -14,14 +15,14 @@
         <%= course.description %>
       </div>
       <div class="col-12 col-sm-4 text-center">
-        <%= link_to "More Info...", course_path(course), class: 'btn btn-lg btn-primary' %>
+        <%= link_to "More Info...", course_path(course), class: "btn btn-outline-danger btn-sm waves-effect" %>
       </div>
     </div>
     <hr class="col-8 offset-2">
     <br class="clr" />
   <% end %>
 
-  <h1>What I'm Teaching</h1>
+
   <% current_user.courses.each do |course| %>
     <h3 class="text-center">
       <%= link_to course.title, course_path(course) %>
@@ -35,7 +36,7 @@
   </div>
 
   <div class="col-12 col-sm-4 text-center">
-    <%= link_to "More Info...", course_path(course), class: 'btn btn-lg btn-primary' %>
+    <%= link_to "More Info...", course_path(course), class: "btn btn-outline-danger btn-sm waves-effect" %>
   </div>
 </div>
 <hr class="col-8 offset-2">
