--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -10,7 +10,7 @@
   </div>
   <br />
   <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
+    <%= f.button :submit, "Resend instructions", class: "btn btn-outline-danger btn-sm waves-effect" %>
   </div>
 <% end %>
  <br />
