--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flixter</title>
+    <title>JustLens</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -16,24 +16,26 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
- <%= link_to 'Flixter', root_url, class: 'navbar-brand' %>
+ <%= link_to 'JustLens', root_url, class: 'navbar-brand' %>
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-md-0">
       <li class="nav-item">
-        <%= link_to 'See All Courses', courses_path, class: 'nav-link' %>
+        <%= link_to 'Courses', courses_path, class: 'nav-link' %>
       </li>
     </ul>
     <ul class="navbar-nav">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to 'My Dashboard', dashboard_path, class: 'nav-link' %>
-    </li>
+
+          <%= link_to 'My Dashboard', dashboard_path, class: 'btn btn-outline-danger btn-sm waves-effect' %></li>
+          &nbsp;
+          <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'btn btn-outline-danger btn-sm waves-effect' %></li>
       <% else %>
-        <li class="nav-item">
-          <%= link_to 'Sign in', new_user_registration_path, class: 'nav-link' %>
-        </li>
-      <% end %>
+          <li><%= link_to 'Log In', new_user_session_path, class: 'btn btn-outline-danger btn-sm waves-effect' %></li>
+          &nbsp;
+          <li><%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-outline-danger btn-sm waves-effect' %></li>
+        <% end %>
     </ul>
 
   </div>
