--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -7,7 +7,7 @@
   </p>
 
 <% if current_lesson.next_lesson.present? %>
-<%= link_to lesson_path(current_lesson.next_lesson), class: 'btn btn-default float-right' do %>
+<%= link_to lesson_path(current_lesson.next_lesson), class: 'btn btn-outline-danger btn-sm waves-effect' do %>
   Next Lesson &nbsp;
   <span class="fa fa-forward"></span>
 <% end %>
