--- a/app/views/static_pages/aboutus.html.erb
+++ b/app/views/static_pages/aboutus.html.erb
@@ -6,7 +6,11 @@
   <h1>WHAT WE’RE ALL ABOUT</h1>
     <br />
   <h1>We champion creators to live their dreams!</h1>
-    <br />
+  <br/>
+  <br />
+  <h2>Creativity gives us hope. It’s how we change the world.</h2>
+  <br/>
+  <br />
   </div>
 </div>
 <br />
